--- a/WindStations.WebUI/Components/Layout/MainLayout.razor.css
+++ b/WindStations.WebUI/Components/Layout/MainLayout.razor.css
@@ -1,15 +1,22 @@
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+.main-container {
+    padding-bottom: 20px;
+    margin: 5px 5px 0px 5px;
+    background: #fafafa;
 }
 
-main {
-    flex: 1;
+::deep .custom-appbar {
+    border-radius: 6px !important;
+    height: auto;
+    width: 100%;
+    font-family: 'Roboto';
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+#offline.bi-circle-fill {
+    color: #d64113;
+}
+
+#online.bi-circle-fill {
+    color: #5fc903;
 }
 
 .top-row {
@@ -27,48 +34,37 @@ main {
         text-decoration: none;
     }
 
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
+        .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
+            text-decoration: underline;
+        }
 
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+        .top-row ::deep a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
 @media (max-width: 640.98px) {
     .top-row {
         justify-content: space-between;
     }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
-    }
+        .top-row ::deep a, .top-row ::deep .btn-link {
+            margin-left: 0;
+        }
 }
 
 @media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
     .top-row {
         position: sticky;
         top: 0;
         z-index: 1;
     }
 
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
+        .top-row.auth ::deep a:first-child {
+            flex: 1;
+            text-align: right;
+            width: 0;
+        }
 
     .top-row, article {
         padding-left: 2rem !important;
