--- a/WindStations.WebUI/Components/_Imports.razor
+++ b/WindStations.WebUI/Components/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using WindStations.WebUI
 @using WindStations.WebUI.Components
-@using BlazorBootstrap;
+@using BlazorBootstrap
+@using Syncfusion.Blazor.Charts
+@using Syncfusion.Blazor.Notifications;
