--- a/WindStations.WebUI/Components/Layout/MainLayout.razor
+++ b/WindStations.WebUI/Components/Layout/MainLayout.razor
@@ -1,19 +1,21 @@
 ﻿@inherits LayoutComponentBase
 @using Syncfusion.Blazor.Navigations
+@inject WindStations.Core.Interfaces.IBatteryService batteryService
+@inject WindStations.Core.Interfaces.IMessagePersistenceService messageService
 
 <div class="main-container">
     <SfAppBar CssClass="custom-appbar">
         <img src="images/windsock.png" width="30" alt="Wind sock" style="margin: 0px 10px" />
         <div style="font-size:22px; font-weight:600">
             WindStation Omiš
-            <i id="@(online ? "online" : "offline")" class="bi bi-circle-fill" style="margin-left: 10px"></i>
+            <i id="@_status" class="bi bi-circle-fill" style="margin-left: 10px"></i>
         </div>
 
         <AppBarSpacer></AppBarSpacer>
 
         <img src="images/battery.png" width="26" alt="Battery" />
         <div style="margin-right: 5px; font-size: 18px">
-            @(batteryStatus)%
+            @(_batteryStatus)%
         </div>
     </SfAppBar>
 
@@ -31,6 +33,17 @@
 </div>
 
 @code {
-    bool online = false;
-    double batteryStatus = 89;
+    private string _status = "offline";
+    private uint _batteryStatus;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _batteryStatus = await batteryService.GetBatteryStatusAsync();
+
+        TimeSpan timeDiff = DateTime.Now - await messageService.GetLatestTimestampAsync();
+
+        const byte inactivityPeriod = 4;
+
+        _status = (timeDiff.TotalMinutes > inactivityPeriod) ? "offline" : "online";
+    }
 }
